# cxx-memory

./: .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml
crates/cxx-memory-abi/: Cargo.toml  build.rs
crates/cxx-memory-abi/cxx/include/: cxx-memory-abi.hxx
crates/cxx-memory-abi/src/: cxx_abi_artifact_info.rs  cxx_abi_entry.rs  error.rs  lib.rs  processing.rs
crates/cxx-memory-abi/src/ffi/: ctypes.rs
src/: macros.rs  move_ref.rs  new.rs
