[package]
edition = "2021"
name = "cxx-memory-abi"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/silvanshade/cxx-memory"
# NOTE: `links` is needed so that `cxx/include/**/*.hxx` is exported to dependencies
links = "cxx-memory-abi"

[features]
alloc = []
default = ["std"]
std = ["alloc", "libc/std"]

[build-dependencies]
cxx-build = { version = "1.0", features = ["parallel"] }

[dependencies]
bytemuck = { version = "1.13", optional = true }
cxx = { version = "1.0", features = ["c++20"] }
cxx-build = { version = "1.0", features = ["parallel"] }
indexmap = { version = "2.0", features = ["serde"] }
libc = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
rust-format = { version = "0.3", features = ["token_stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
syn = { version = "2.0", features = ["full"] }
walkdir = "2.3"
